...
                                                <action selector="toggleToolbarShown:" target="Ady-hI-5gd" id="BXY-wc-z0C"/>
                                            </connections>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="Window" id="aUF-d1-5bR">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Window" systemMenu="window" id="Td7-aD-5lo">
                                    <items>
                                        <menuItem title="Minimize" keyEquivalent="m" id="OY7-WF-poV">
                                            <connections>
                                                <action selector="performMiniaturize:" target="Ady-hI-5gd" id="VwT-WD-YPe"/>
...
            <point key="canvasLocation" x="75" y="0.0"/>
        </scene>
        <!--Main Window Controller-->
        <scene sceneID="R2V-B0-nI4">
            <objects>
                <windowController storyboardIdentifier="mainwindowcontroller" showSeguePresentationStyle="single" id="B8D-0N-5wS" userLabel="Main Window Controller" customClass="WindowController" customModule="BatteryStatusShow" customModuleProvider="target" sceneMemberID="viewController">
                    <window key="window" title="Battery Status Show" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="IQv-IB-iLA">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                        <rect key="contentRect" x="200" y="300" width="420" height="560"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
                        <value key="minSize" type="size" width="420" height="560"/>
                        <value key="maxSize" type="size" width="840" height="560"/>
                        <connections>
...
        </scene>
        <!--Tab View Controller-->
        <scene sceneID="2mt-Lz-yaO">
            <objects>
                <tabViewController storyboardIdentifier="tabviewcontroller" showSeguePresentationStyle="single" selectedTabViewItemIndex="0" tabStyle="toolbar" id="JFv-E4-Kep" customClass="TabViewController" customModule="BatteryStatusShow" customModuleProvider="target" sceneMemberID="viewController">
                    <tabViewItems>
                        <tabViewItem label="macOS" identifier="" image="NSComputer" id="NbB-rq-BQW"/>
                        <tabViewItem label="Graph" image="Graph" id="wUG-y3-I9l" userLabel="Chat"/>
                    </tabViewItems>
                    <tabView key="tabView" drawsBackground="NO" allowsTruncatedLabels="NO" type="noTabsNoBorder" id="la5-ba-uI4">
                        <rect key="frame" x="0.0" y="0.0" width="400" height="400"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <font key="font" metaFont="system"/>
                        <connections>
...
                                    <action selector="ExportButtonAction:" target="1LA-a6-T2O" id="ITP-6J-gkV"/>
                                </connections>
                            </button>
                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mnd-4V-2D3">
                                <rect key="frame" x="212" y="13" width="69" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                <buttonCell key="cell" type="push" title="Stop" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="0Ih-jy-K0z">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="StopButtonAction:" target="1LA-a6-T2O" id="hm8-Rf-ld2"/>
                                </connections>
                            </button>
                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U73-CT-cdX">
                                <rect key="frame" x="142" y="13" width="70" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                <buttonCell key="cell" type="push" title="Start" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="HvD-ah-iv5">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="StartButtonAction:" target="1LA-a6-T2O" id="Yh9-hW-CQl"/>
                                </connections>
                            </button>
                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Vk-m8-YLg">
                                <rect key="frame" x="13" y="13" width="73" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <buttonCell key="cell" type="push" title="Label" bezelStyle="rounded" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="gEY-vi-bWL">
                                    <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="LabelButtonAction:" target="1LA-a6-T2O" id="YPF-oy-7hW"/>
                                </connections>
...
